--- a/light.css
+++ b/light.css
@@ -1,45 +1,36 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
-}
-
-body{
+.main{
     display: flex;
     align-items: center;
     justify-content: space-around;
     min-height: 100vh;
-    background-color: #2f363e;
+    background-color: #dcecff;
     flex-wrap: wrap;
 }
-.text h1{
+
+.main .text h1{
     font-family: 'Ms Madi', cursive;
     font-size: 100px;
     font-weight: 300;
     font-style: italic;
-    color: rgb(198, 223, 255);
+    color: #000000;
 }
-.text p{
-    color: #c3c3c36b;
+.main .text p{
+    color: #4d4d4da9;
     font-size: 20px;
     font-family:'Courier New', Courier, monospace;
 }
-.text p span{
-    color: var(--clr);
-    font-weight: bold;
-}
-.container{
+
+.main .container{
     position: relative;
-    background-color: #2f363e ;
+    background-color: #dcecff ;
     /* min-height: 500px; */
     border-radius: 20px;
     border-top-left-radius: 225px;
     border-top-right-radius: 225px;
-    box-shadow:25px 25px 75px rgba(0,0,0,0.75),
-    10px 10px 70px rgba(0, 0, 0,0.25),
-    inset 5px 5px 10px rgba(0 ,0,0,0.5),
-    inset 5px 5px 20px rgba(225 ,225,225,0.2),
+    box-shadow:25px 25px 75px rgba(157, 216, 255, 0.75),
+    10px 10px 70px rgba(218, 255, 251, 0.25),
+    inset 5px 5px 10px rgba(223, 242, 255, 0.5),
+    inset 5px 5px 20px rgba(210, 225, 242, 0.2),
     inset -5px -5px 15px rgba(0 ,0,0,0.75);
     display: flex;
     justify-content: center;
@@ -47,11 +38,11 @@ body{
     flex-direction: column;
 }
 
-.clock{
+.main .clock{
     position: relative;
     width: 450px;
     height: 450px;
-    background-color: #2f363e ;
+    background-color: #dcecff ;
     border-radius: 50%;
     box-shadow: 10px 50px 70px rgba(0, 0, 0,0.25),
     inset 5px 5px 10px rgba(0 ,0,0,0.5),
@@ -63,7 +54,6 @@ body{
     margin-bottom: 30px;
 }
 
-
 .clock:before{
     content: '';
     position: absolute;
@@ -74,18 +64,16 @@ body{
     border-radius: 50%;
     z-index: 100000;
 }
-
-
-.clock span{
+ .main .clock span{
     position: absolute;
     inset: 20px;
-    color: #fff;
+    color: black;
     text-align: center;
     transform: rotate(calc(30deg * var(--i)));
     /* 360 / 12 = 30deg  */
 }
 
-.clock span b {
+.main .clock span b {
     font-size: 2em;
     opacity: 0.25;
     font-weight: 600;
@@ -94,7 +82,7 @@ body{
 
 }
 
-.circle {
+.main .circle {
     position: absolute;
     width: 300px;
     height: 300px;
@@ -106,7 +94,8 @@ body{
     z-index: 10;
 
 }
-.circle i {
+
+.main .circle i {
     position: absolute;
     width: 6px;
     height: 50%;
@@ -115,24 +104,26 @@ body{
     transform-origin:bottom;
     transform: scaleY(0.5);
 }
-.circle:nth-child(1) i {
+
+.main .circle:nth-child(1) i {
     width: 2px;
 }
-.circle:nth-child(2) i {
+.main .circle:nth-child(2) i {
     width: 6px;
 }
-.circle2{
+
+.main .circle2{
     width: 240px;
     height: 240px;
     z-index: 9;
 }
-.circle3{
+.main .circle3{
     width: 180px;
     height: 180px;
     z-index: 8;
 
 }
-.circle::before{
+.main .circle::before{
     content: '';
     position: absolute;
     top: -8.5px;
@@ -146,38 +137,7 @@ body{
 
 
 
-.cbdy{
-    background-color: transparent;
-    box-shadow: 10px 50px 70px rgba(0, 0, 0,0.25),
-    inset 5px 5px 10px rgba(0 ,0,0,0.5),
-    inset 5px 5px 20px rgba(0 ,0,0,0.2),
-    inset -5px -5px 15px rgba(0 ,0,0,0.75);
-padding: 20px;
-border-radius: 30px;
-position: fixed;
-top: 30px;
-left: 50px;
-color: rgb(198, 223, 255);
-font-weight: 600;
-display: flex;
-justify-content: center;
-align-items: center;
-border: none;
-}
-
-.button{
-    background-color:yellow ;
-    outline: none;
-    border-radius: 50px;
-    padding: 10px;
-    margin: 5px;
-    border: none;
-}
-
-/*  */
-
-
-#time{
+.main #time{
     margin-bottom: 40px;
     display: flex;
     padding: 10px 20px;
@@ -190,7 +150,7 @@ border: none;
     inset -5px -5px 15px rgba(0 ,0,0,0.75) ;
 }
 
-#time div{
+.main #time div{
     position: relative;
     width: 60px;
     text-align: center;
@@ -198,14 +158,14 @@ border: none;
     color: var(--clr) ;
 }
 
-#time div:nth-child(1):after,
-#time div:nth-child(2):after{
+.main #time div:nth-child(1):after,
+.main #time div:nth-child(2):after{
     content: ':';
     position: absolute;
     right: -4px;
 }
 
-#time div:last-child{
+.main #time div:last-child{
     font-size: 0.5em;
     display: flex;
     justify-content: center;
@@ -213,7 +173,7 @@ border: none;
     color: #fff;
 }
 
-#time div:nth-child(2):after{
+.main #time div:nth-child(2):after{
     animation: animate 1s steps(1) infinite;
 }
 
@@ -224,4 +184,33 @@ border: none;
     50%{
         opacity: 0;
     }
+}
+
+
+.main .cbdy{
+    background-color: transparent;
+    box-shadow: 10px 50px 70px rgba(0, 0, 0,0.25),
+    inset 5px 5px 10px rgba(0 ,0,0,0.5),
+    inset 5px 5px 20px rgba(0 ,0,0,0.2),
+    inset -5px -5px 15px rgba(0 ,0,0,0.75);
+padding: 20px;
+border-radius: 30px;
+position: fixed;
+top: 30px;
+left: 50px;
+color: rgba(35, 35, 35, 0.69);
+font-weight: 700;
+display: flex;
+justify-content: center;
+align-items: center;
+border: none;
+}
+
+.main .button{
+    background-color:rgb(0, 150, 210) ;
+    outline: none;
+    border-radius: 50px;
+    padding: 10px;
+    margin: 5px;
+    border: none;
 }
